Clean up project and enhance cluster admin UI
- Remove unused backup directory and duplicate SBE generated files
- Delete orphan ClusterBanner component and stale UI assets
- Update .gitignore to exclude generated files and build artifacts
- Enhance HttpController with improved WebSocket handling
- Add cluster state management and connection status improvements
- Update ClusterAdmin UI with better styling and functionality

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>